- bugfix: background does not span behind the taskBar, on resize you can see a black line

--- a/src/components/Desktop/Desktop.module.scss
+++ b/src/components/Desktop/Desktop.module.scss
@@ -1,5 +1,4 @@
 div.root {
   position: absolute;
   width: 100%;
-  height: 100%;
 }
